--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://money-manager-me9g.vercel.app/
+VITE_API_BASE_URL=https://money-manager-me9g.vercel.app
 VITE_APP_NAME=Money Manager
